# datascience-knowledge-base

./: pyproject.toml
ab_testing/bandit_algorithms/web_optimisation/: 00_glossary.ipynb  (+8 more)
deep_learning/reinforcement_learning/: 03_Approximate_Q_Learning.ipynb
exploratory_data_analysis/: 03_statistical_tests_and_significance_testing.ipynb  04_regresssion.ipynb  04_statistical_tests_and_significance_testing.ipynb  05_classification.ipynb  06_statistical_machine_learning.ipynb  07_unsupervised_learning.ipynb  data_and_sampling_distributions.ipynb  data_types.ipynb  eda.ipynb  estimate_of_location.ipynb  statistical_tests_and_significance_testing.ipynb
feature_engineering/: categorical_features.ipynb  numerical_features.ipynb
ml_design_patterns/: 01_the_need_for_ml_design_patterns.ipynb  02_data_representation_design_patterns.ipynb  03_problem_representaion_design_pattern.ipynb  04_model_training_patterns.ipynb  05_resilient_serving.ipynb  06_reproducibility_design_patterns.ipynb  07_repsonsible_ai.ipynb  08_connected_patterns.ipynb
ml_maths/: 00_symbol_index.ipynb  01_linear_algebra.ipynb  03_analytic_geometry.ipynb  04_matrix_decomposition.ipynb  05_vector_calculus.ipynb  06_probability_and_distributions.ipynb  07_continuous_optimisation.ipynb  08_model_meets_data.ipynb  09_linear_regression.ipynb  10_dimensionality_reduction_with_principal_component_analysis.ipynb  11_density_estimation_with_gaussian_mixture_models.ipynb
recommender_systems/collaborative_filtering/: 01_intro.ipynb  02_memory_models.ipynb  item_based_colab.ipynb  svd.ipynb  user_based_colab.ipynb
