[tool.poetry]
name = "theory"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
numpy = "^1.18.4"
pandas = "^1.0.3"
gym = "^0.17.1"
jupyterlab = "^2.1.2"
torch = {url = "https://download.pytorch.org/whl/cu102/torch-1.5.0-cp37-cp37m-win_amd64.whl"}
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-surprise = "^1.1.0"
torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.5.0-cp37-cp37m-win_amd64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
