[tool.poetry]
name = "datascience-knowledge-base"
version = "0.0.0"
description = ""
authors = ["Harpal Sahota <harpal28sahota@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.7,<3.11"
numpy = "^1.21.2"
sklearn = "^0.0"
pandas = "^1.3.3"
gym = "^0.20.0"
jupyterlab = "^3.1.12"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scikit-surprise = "^1.1.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
pyfarmhash = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
